update navbar desgin

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Parcel Go</title>
 </head>
 
-<body>
+<body class="bodyFont">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
